--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -6,7 +6,8 @@
 	  </head>
 	  <body>
     <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
+    <a href="portfolio.html">portfolio</a>
+      <a href="https://scratch.mit.edu/projects/172413629/">Scratch Project</a>
     <h1>This is my Portfolio Page !</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
