--- a/my_website/about.html
+++ b/my_website/about.html
@@ -9,3 +9,4 @@
      <a href="about.html">about</a>
      
       <h1>"The choices you make and the decisions that follow are a reflection of who you really are." !</h1>
+        <h1>"The only person you can not hide or runaway from is yourself." !</h1>
