--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -8,7 +8,7 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">portfolio</a>
      <a href="about.html">about</a>
-      <a href="https://scratch.mit.edu/projects/172413629/">Scratch Project</a> height="100">
+      <a href="https://scratch.mit.edu/projects/172413629/">Scratch Project</a> 
     <h1>This is my Portfolio Page !</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
