--- a/my_website/about.html
+++ b/my_website/about.html
@@ -1,12 +1,17 @@
-<html lang="en">
+
+     <!doctype html>
+	<html lang="en">
 	  <head>
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
 	  </head>
 	  <body>
     <a href="index.html">Home</a>
-    <a href="portfolio.html">portfolio</a>
-     <a href="about.html">about</a>
-     
+    <a href="portfolio.html">Portfolio</a>
+    <a href="about.html">about</a>
+    </a>
+	  </body>
+	</html>
+
       <h1>"The choices you make and the decisions that follow are a reflection of who you really are." !</h1>
-        <h1>"The only person you can not hide or runaway from is yourself." !</h1>
+        <h1>"The only person you can not hide from is yourself." !</h1>
