--- a/my_website/about.html
+++ b/my_website/about.html
@@ -13,5 +13,5 @@
 	  </body>
 	</html>
 
-      <h1>"The choices you make and the decisions that follow are a reflection of who you really are." !</h1>
+      <h1>"The choices you make and the actions that follow are a reflection of who you really are." !</h1>
         <h1>"The only person you can not hide from is yourself." !</h1>
