--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -14,7 +14,7 @@
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
       <img src="images/scratchlogo.png" height="100">
-    </a>
+    <a href="ai2.appinventor.mit.edu/?locale=en#4825380315463680">MoleMash</a>
 	  </body>
 	</html>
 	
